--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,5 @@
 AM_CPPFLAGS= -Wall $(GLIB_CFLAGS) $(FUSE_CFLAGS)
 
 bin_PROGRAMS = nlinkfs
-nlinkfs_SOURCES = nlinkfs.c
-nlinkfs_LDFLAGS=$(FUSE_LIBS) $(GLIB_LIBS)
+nlinkfs_SOURCES = nlinkfs.c nlinkfs.h
 
